<resources>
    <string name="app_name">Aula04-Gabriel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listar">Lista de Produtos</string>
    <string name="title_activity_cadastrar">Cadastro de Produtos</string>
    <string name="title_activity_sobre">Sobre o Aplicativo</string>

    <string name="codigo">Codigo</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="sobre">Sobre</string>
    <string name="imagem">Link da Imagem</string>

    <string name="cadastrar">Cadastrar</string>
</resources>
