<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.wolff.jackson.aula04_gabriel.CadastrarActivity"
    android:orientation="vertical"
    android:id="@+id/root">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etCodigo"
                android:layout_gravity="center_horizontal"
                android:hint="@string/codigo"
                android:layout_marginBottom="10dp"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNome"
                android:layout_gravity="center_horizontal"
                android:hint="@string/nome"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/etDescricao"
                android:layout_gravity="center_horizontal"
                android:hint="@string/descricao"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etImagem"
                android:layout_gravity="center_horizontal"
                android:hint="@string/imagem"
                android:layout_marginBottom="10dp"
                android:inputType="textUri|textWebEditText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:id="@+id/btCadastrar"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
